--- a/.env
+++ b/.env
@@ -2,5 +2,9 @@ URL = https://www.cnrfc.noaa.gov/graphicalRVF.php?id=VNCC1
 STAGE_THRESHOLD = 7.0
 
 # EMAIL STUFF (gmail account)
-USERNAME = stagefloodmonitor
-PASSWORD = NickCoolGuy12
+RECEIVERS_EMAIL = nmcguire@rfengineeringinc.com
+SENDERS_EMAIL = stagefloodmonitor@gmail.com
+# USERNAME = this goes in github 
+# PASSWORD = this goes in github 
+SMTP_SERVER = smtp.gmail.com
+SMTP_PORT = 587
