Add high stage threshold

--- a/.env
+++ b/.env
@@ -1,10 +1,16 @@
-URL = https://www.cnrfc.noaa.gov/graphicalRVF.php?id=VNCC1
-STAGE_THRESHOLD = 7.0
+URL = https://www.cnrfc.noaa.gov/graphicalRVF.php?id=
+STATION = VNCC1
+LOW_STAGE_THRESHOLD = 7.0
+HIGH_STAGE_THRESHOLD = 7.5
 
 # EMAIL STUFF (gmail account)
+SUBJECT = Flood Monitoring
+HIGH_WARNING_LEVEL = HIGH
+MEDIUM_WARNING_LEVEL = MEDIUM
+LOW_WARNING_LEVEL = LOW
 RECEIVERS_EMAIL = nmcguire@rfengineeringinc.com
 SENDERS_EMAIL = stagefloodmonitor@gmail.com
-# USERNAME = this goes in github 
-# PASSWORD = this goes in github 
+# USERNAME =  
+# PASSWORD = 
 SMTP_SERVER = smtp.gmail.com
 SMTP_PORT = 587
