--- a/.github/workflows/cron_job.yaml
+++ b/.github/workflows/cron_job.yaml
@@ -2,10 +2,9 @@ name: Send Email Report
 
 on:
   schedule:
-    # Runs every day at 6 AM PST; adjust cron expression as needed
-    - cron: '0 14 * * *'
+    # Runs every day at 6AM, 12PM, 6PM, and 10PM PST; adjust cron expression as needed
+    - cron: '0 6,12,18,22 * * *'
   workflow_dispatch:  # Allows manual triggering
-  push:
 
 jobs:
   send-email:
@@ -33,3 +32,10 @@ jobs:
         run: |
           source venv/bin/activate
           python src/main.py
+
+      - name: Upload log as artifact
+        if: always()  
+        uses: actions/upload-artifact@v4
+        with:
+          name: captains_log
+          path: app.log
