--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 dotenv = "^0.9.9"
 beautifulsoup4 = "^4.13.3"
 requests = "^2.32.3"
+pytz = "^2025.1"
+tzdata = "^2025.1"
 
 [build-system]
 requires = ["poetry-core"]
