--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ SUBJECT = Flood Monitoring
 HIGH_WARNING_LEVEL = HIGH
 MEDIUM_WARNING_LEVEL = MEDIUM
 LOW_WARNING_LEVEL = LOW
-RECEIVERS_EMAIL = nmcguire@rfengineeringinc.com
+RECEIVERS_EMAIL = nmcguire@rfengineeringinc.com,mrossiter@rfengineeringinc.com,bcreager@rfengineeringinc.com
 SENDERS_EMAIL = stagefloodmonitor@gmail.com
-# USERNAME =  
-# PASSWORD = 
+USERNAME = StageFloodMonitor
+PASSWORD = twac yvkr smio gvvu
 SMTP_SERVER = smtp.gmail.com
 SMTP_PORT = 587
