--- a/.github/workflows/cron_job.yaml
+++ b/.github/workflows/cron_job.yaml
@@ -3,7 +3,8 @@ name: Send Email Report
 on:
   schedule:
     # Runs every day at 6AM, 12PM, 6PM, and 10PM PST; adjust cron expression as needed
-    - cron: '0 1,5,13,19 * * *'
+    - cron: '0 6,12,18,22 * * *'
+      timezone: America/Los_Angeles*'
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
